--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "events-client",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
