Remove plus sign

--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
     }
   },
   "lint-staged": {
-    "*.+(js|jsx)": [
+    "*.(js|jsx)": [
       "eslint --fix",
       "git add"
     ],
-    "*.+(json|css|md)": [
+    "*.(json|css|md)": [
       "prettier --write",
       "git add"
     ]
