--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "axios": "^0.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "styled-components": "^4.3.2"
   },
   "devDependencies": {
     "eslint-config-prettier": "^6.0.0",
