--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@reach/dialog": "^0.2.9",
     "@reach/router": "^1.2.1",
     "axios": "^0.19.0",
+    "normalize.css": "^8.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
@@ -18,6 +19,7 @@
     "prettier": "^1.18.2"
   },
   "scripts": {
+    "dev": "yarn start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
