--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.0.0",
+    "@testing-library/react": "^8.0.7",
     "env-cmd": "^9.0.3",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
