--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "eslint-plugin-prettier": "^3.1.0",
     "husky": "^3.0.0",
     "lint-staged": "^9.2.0",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "source-map-explorer": "^2.0.1"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "dev": "yarn start",
     "start": "react-scripts start",
     "build": "react-scripts build",
