--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "@reach/dialog": "^0.2.9",
     "@reach/router": "^1.2.1",
     "axios": "^0.19.0",
-    "moment": "^2.24.0",
+    "date-fns": "^2.0.1",
+    "flatpickr": "^4.6.2",
     "normalize.css": "^8.0.1",
     "react": "^16.8.6",
-    "react-datetime": "^2.16.3",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "styled-components": "^4.3.2"
