--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "env-cmd": "^9.0.3",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
+    "faker": "^4.1.0",
     "husky": "^3.0.0",
     "lint-staged": "^9.2.0",
     "prettier": "^1.18.2",
