--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "axios": "^0.19.0",
     "date-fns": "^2.0.1",
     "flatpickr": "^4.6.2",
+    "marked": "^0.7.0",
     "normalize.css": "^8.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.1.0",
     "react-scripts": "3.0.1",
     "styled-components": "^4.3.2"
   },
