--- a/package.json
+++ b/package.json
@@ -2,30 +2,27 @@
   "name": "events-client",
   "private": true,
   "dependencies": {
-    "@reach/dialog": "^0.2.9",
-    "@reach/router": "^1.2.1",
     "axios": "^0.19.0",
-    "date-fns": "^2.0.1",
-    "flatpickr": "^4.6.2",
+    "date-fns": "^2.3.0",
     "marked": "^0.7.0",
     "normalize.css": "^8.0.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-router-dom": "^5.1.0",
-    "react-scripts": "3.0.1",
-    "styled-components": "^4.3.2"
+    "react-scripts": "^3.1.2",
+    "styled-components": "^4.4.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^4.0.0",
-    "@testing-library/react": "^8.0.7",
-    "env-cmd": "^9.0.3",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-prettier": "^3.1.0",
+    "@testing-library/jest-dom": "^4.1.0",
+    "@testing-library/react": "^9.2.0",
+    "env-cmd": "^10.0.1",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "faker": "^4.1.0",
-    "husky": "^3.0.0",
-    "lint-staged": "^9.2.0",
+    "husky": "^3.0.5",
+    "lint-staged": "^9.4.0",
     "prettier": "^1.18.2",
-    "source-map-explorer": "^2.0.1"
+    "source-map-explorer": "^2.1.0"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
