--- a/package.json
+++ b/package.json
@@ -2,31 +2,39 @@
   "name": "posts-client",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.0",
-    "date-fns": "^2.3.0",
-    "marked": "^0.7.0",
+    "axios": "^0.19.2",
+    "date-fns": "^2.9.0",
+    "marked": "^0.8.0",
     "normalize.css": "^8.0.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-router-dom": "^5.1.0",
-    "react-scripts": "^3.1.2",
-    "styled-components": "^4.4.0"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.3.1",
+    "styled-components": "^5.0.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^8.2.0",
-    "@commitlint/config-conventional": "^8.2.0",
-    "@testing-library/jest-dom": "^4.1.0",
-    "@testing-library/react": "^9.2.0",
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
+    "@testing-library/jest-dom": "^5.1.0",
+    "@testing-library/react": "^9.4.0",
+    "@types/jest": "^25.1.1",
+    "@types/node": "^13.7.0",
+    "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/styled-components": "^4.4.2",
     "env-cmd": "^10.0.1",
-    "eslint-config-prettier": "^6.3.0",
-    "eslint-plugin-jest": "^22.17.0",
-    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-jest": "^23.6.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-testing-library": "^2.2.0",
     "faker": "^4.1.0",
-    "husky": "^3.0.5",
-    "is-ci-cli": "^1.1.1",
-    "lint-staged": "^9.4.0",
-    "prettier": "^1.18.2",
-    "source-map-explorer": "^2.1.0"
+    "husky": "^4.2.1",
+    "is-ci-cli": "^2.0.0",
+    "lint-staged": "^10.0.7",
+    "prettier": "^1.19.1",
+    "source-map-explorer": "^2.2.2",
+    "typescript": "^3.7.5"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
@@ -43,7 +51,8 @@
     "extends": [
       "react-app",
       "plugin:prettier/recommended",
-      "plugin:jest/recommended"
+      "plugin:jest/recommended",
+      "plugin:testing-library/react"
     ],
     "rules": {
       "jest/no-commented-out-tests": "error",
