--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@jackfranklin/test-data-bot": "^1.0.0",
+    "@testing-library/cypress": "^5.2.1",
     "@testing-library/jest-dom": "^5.1.0",
     "@testing-library/react": "^9.4.0",
     "@types/jest": "^25.1.1",
@@ -26,8 +27,10 @@
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^4.4.2",
+    "cypress": "^3.8.3",
     "env-cmd": "^10.0.1",
     "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-cypress": "^2.9.0",
     "eslint-plugin-jest": "^23.6.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-testing-library": "^2.2.0",
@@ -35,19 +38,28 @@
     "is-ci-cli": "^2.0.0",
     "lint-staged": "^10.0.7",
     "prettier": "^1.19.1",
+    "serve": "^11.3.0",
     "source-map-explorer": "^2.2.2",
+    "start-server-and-test": "^1.10.8",
     "typescript": "^3.7.5"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "dev": "yarn start",
     "start": "react-scripts start",
+    "start:nobrowser": "BROWSER=none react-scripts start",
+    "start:e2e": "serve --no-clipboard --single --listen 3000 build",
     "build": "react-scripts build",
     "build:staging": "env-cmd -f .env.staging npm run build",
     "test": "is-ci \"test:ci\" \"test:watch\"",
     "test:watch": "react-scripts test",
     "test:coverage": "react-scripts test --watchAll --coverage",
     "test:ci": "CI=true react-scripts test --coverage",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+    "test:e2e:dev": "start-test start:nobrowser 3000 cy:open",
+    "test:e2e:run": "start-test start:e2e 3000 cy:run",
+    "test:e2e": "is-ci \"test:e2e:run\" \"test:e2e:dev\"",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -55,7 +67,8 @@
       "react-app",
       "plugin:prettier/recommended",
       "plugin:jest/recommended",
-      "plugin:testing-library/react"
+      "plugin:testing-library/react",
+      "plugin:cypress/recommended"
     ],
     "rules": {
       "jest/no-commented-out-tests": "error",
