--- a/package.json
+++ b/package.json
@@ -91,12 +91,10 @@
   },
   "lint-staged": {
     "*.(js|jsx)": [
-      "eslint --fix",
-      "git add"
+      "eslint --fix"
     ],
     "*.(json|css|md)": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   },
   "browserslist": {
