--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,9 @@
-version: 2
-jobs:
-  test:unit:
-    docker:
-      - image: circleci/node:10.16
-    steps:
-      - checkout
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "package.json" }}
-            - v1-dependencies-
-      - run:
-          name: Install dependencies
-          command: yarn install
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-      - run:
-          name: Unit testing
-          command: npm run test
+version: 2.1
+orbs:
+  cypress: cypress-io/cypress@1
 workflows:
-  version: 2
   test:
     jobs:
-      - test:unit
+      - cypress/run:
+          yarn: true
+          command: yarn test && yarn test:e2e
